--- a/ui/src/style.css
+++ b/ui/src/style.css
@@ -59,7 +59,17 @@ button:focus-visible {
 }
 
 .card {
-  padding: 2em;
+  /* padding: 2em; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 300px;
+  height: 100px;
+  background-color: #f1f1f1;
+  border-radius: 8px;
+  border: 0.7px solid #eee;
+  box-shadow: 0 4px 10px -1px rgba(0, 0, 0, 0.1), 
+    0 2px 6px -2px rgba(0, 0, 0, 0.2);
 }
 
 #app {
